...
          onPressed: () => Navigator.of(context).pop(),
        ),
        title: RichText(
          text: TextSpan(
            children: [
              TextSpan(
                text: 'EL',
                style: ElioTextStyles.sectionHeadingStyle.copyWith(fontSize: 22, fontWeight: FontWeight.w800, letterSpacing: -0.5),
              ),
              TextSpan(
                text: 'i',
                style: ElioTextStyles.sectionHeadingStyle.copyWith(fontSize: 22, fontWeight: FontWeight.w300, color: ElioColors.terracotta, letterSpacing: -0.5),
              ),
...
